--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">AppTurnos</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Cerrar sesion</string>
+
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">AppTurnos</string>
+    <string name="first_fragment_label">Turnos</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
